--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-scripts": "3.2.0",
+    "recordrtc": "^5.5.8",
+    "tone": "^13.8.25",
     "typescript": "3.7.2"
   },
   "scripts": {
